# serializer version: 1
# name: test_cli_error_extra_config
  'Vocab file received.'
# ---
# name: test_cli_error_extra_config.1
  "Bad request: 400 Bad Request: Unrecognised config was provided: 'cause-an-error'. (InvalidSessionConfigError)"
# ---
# name: test_cli_error_list
  "Bad request: 400 Bad Request: InvalidVocabFileFormatError: Invalid part of speech: 'Cause an error'"
# ---
# name: test_cli_error_list.1
  'Bad request: 400 Bad Request: Vocab file has not been provided.'
# ---
# name: test_cli_error_missing1_config
  'Vocab file received.'
# ---
# name: test_cli_error_missing1_config.1
  "Bad request: 400 Bad Request: Required config is missing: 'english-verbal-nouns'. (InvalidSessionConfigError)"
# ---
# name: test_cli_error_missing2_config
  'Vocab file received.'
# ---
# name: test_cli_error_missing2_config.1
  "Bad request: 400 Bad Request: Required config is missing: 'number-multiplechoice-options'. (InvalidSessionConfigError)"
# ---
# name: test_cli_error_type1_config
  'Vocab file received.'
# ---
# name: test_cli_error_type1_config.1
  "Bad request: 400 Bad Request: Expected type typing.ReadOnly[int] for 'number-multiplechoice-options', but received type str. (InvalidSessionConfigError)"
# ---
# name: test_cli_error_type2_config
  'Vocab file received.'
# ---
# name: test_cli_error_type2_config.1
  "Bad request: 400 Bad Request: Invalid session config: 'number-of-questions' must be an integer (got type str). (InvalidSessionConfigError)"
# ---
# name: test_cli_normal
  'Vocab file received.'
# ---
# name: test_cli_normal.1
  list([
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'in',
        'choices': list([
          'acer',
          'in',
          'laetus',
        ]),
        'prompt': 'into',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'dative singular',
          'genitive singular',
          'nominative plural',
          'vocative plural',
        ]),
        'dictionary_entry': 'farmer: agricola, agricolae, (m)',
        'main_answer': 'nominative plural',
        'prompt': 'agricolae',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'canem',
          'canis',
        ]),
        'main_answer': 'canem',
        'prompt': 'dog',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'accusative plural neuter',
          'nominative plural neuter',
          'nominative singular feminine',
        ]),
        'dictionary_entry': 'this: hic, haec, hoc',
        'main_answer': 'nominative singular feminine',
        'prompt': 'haec',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'I try',
        'choices': list([
          'I take',
          'I try',
          'light',
        ]),
        'prompt': 'conor',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'comparative nominative singular feminine',
          'comparative nominative singular masculine',
          'comparative vocative singular feminine',
          'comparative vocative singular masculine',
        ]),
        'dictionary_entry': 'light: levis, leve, (3-2)',
        'main_answer': 'comparative nominative singular masculine',
        'prompt': 'levior',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'accusative singular',
        ]),
        'dictionary_entry': 'dog: canis, canis, (m)',
        'main_answer': 'accusative singular',
        'prompt': 'canem',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'nomine',
        ]),
        'main_answer': 'nomine',
        'prompt': 'by means of a name',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'acceptablest',
          'adeptest',
          'admirablest',
          'advantageousest',
          'amplest',
          'angelicalest',
          'angelicest',
          'bang-upest',
          'beatificest',
          'beneficialest',
          'best',
          'bulliest',
          'closest',
          'completest',
          'corkest',
          'crackiest',
          'dandiest',
          'dearest',
          'decentest',
          'dependablest',
          'discriminatingest',
          'echtest',
          'ecofriendliest',
          'effectivest',
          'eldest',
          'estimablest',
          'expertest',
          'extremely acceptable',
          'extremely adept',
          'extremely admirable',
          'extremely admirably',
          'extremely advantageous',
          'extremely advantageously',
          'extremely ample',
          'extremely amply',
          'extremely angelic',
          'extremely angelical',
          'extremely angelically',
          'extremely bang-up',
          'extremely beatific',
          'extremely beneficial',
          'extremely beneficially',
          'extremely bully',
          'extremely close',
          'extremely closely',
          'extremely complete',
          'extremely completely',
          'extremely cork',
          'extremely cracky',
          'extremely dandily',
          'extremely dandy',
          'extremely dear',
          'extremely dearly',
          'extremely decent',
          'extremely decently',
          'extremely dependable',
          'extremely dependably',
          'extremely discriminating',
          'extremely echt',
          'extremely ecofriendly',
          'extremely effective',
          'extremely effectively',
          'extremely estimable',
          'extremely expert',
          'extremely expertly',
          'extremely favorable',
          'extremely favorably',
          'extremely favourable',
          'extremely fortunate',
          'extremely fortunately',
          'extremely fresh',
          'extremely freshly',
          'extremely full',
          'extremely fully',
          'extremely genuine',
          'extremely genuinely',
          'extremely good',
          'extremely goodish',
          'extremely goody-goody',
          'extremely great',
          'extremely greatly',
          'extremely green',
          'extremely greenly',
          'extremely groovy',
          'extremely healthful',
          'extremely healthily',
          'extremely healthy',
          'extremely honest',
          'extremely honestly',
          'extremely honorable',
          'extremely honorably',
          'extremely hot',
          'extremely hotly',
          'extremely instagood',
          'extremely intellectual',
          'extremely intellectually',
          'extremely just',
          'extremely justly',
          'extremely keen',
          'extremely keenly',
          'extremely near',
          'extremely neat',
          'extremely neatly',
          'extremely nice',
          'extremely nicely',
          'extremely nifty',
          'extremely old',
          'extremely operative',
          'extremely operatively',
          'extremely opportune',
          'extremely opportunely',
          'extremely peachy',
          'extremely pleasing',
          'extremely pleasingly',
          'extremely practice',
          'extremely proficient',
          'extremely proficiently',
          'extremely redeemy',
          'extremely redemptive',
          'extremely reputable',
          'extremely reputably',
          'extremely respectable',
          'extremely respectably',
          'extremely right',
          'extremely righteous',
          'extremely righteously',
          'extremely ripe',
          'extremely ripely',
          'extremely safe',
          'extremely saint',
          'extremely saintlike',
          'extremely saintly',
          'extremely salutary',
          'extremely satisfactorily',
          'extremely satisfactory',
          'extremely save',
          'extremely secure',
          'extremely securely',
          'extremely serious',
          'extremely seriously',
          'extremely skilful',
          'extremely skilled',
          'extremely skillful',
          'extremely skillfully',
          'extremely slap-up',
          'extremely smash',
          'extremely solid',
          'extremely solidly',
          'extremely sound',
          'extremely soundly',
          'extremely superb',
          'extremely superbly',
          'extremely swell',
          'extremely unacceptably',
          'extremely unspoiled',
          'extremely unspoilt',
          'extremely upright',
          'extremely uprightly',
          'extremely well',
          'extremely well-behave',
          'extremely white',
          'favorablest',
          'favourablest',
          'fortunatest',
          'freshest',
          'fullest',
          'genuinest',
          'goodishest',
          'goody-goodiest',
          'greatest',
          'greenest',
          'grooviest',
          'healthfulest',
          'healthiest',
          'honestest',
          'honorablest',
          'hottest',
          'instagoodest',
          'intellectualest',
          'justest',
          'keenest',
          'most acceptable',
          'most adept',
          'most admirable',
          'most admirably',
          'most advantageous',
          'most advantageously',
          'most ample',
          'most amply',
          'most angelic',
          'most angelical',
          'most angelically',
          'most bang-up',
          'most beatific',
          'most beneficial',
          'most beneficially',
          'most bully',
          'most close',
          'most closely',
          'most complete',
          'most completely',
          'most cork',
          'most cracky',
          'most dandily',
          'most dandy',
          'most dear',
          'most dearly',
          'most decent',
          'most decently',
          'most dependable',
          'most dependably',
          'most discriminating',
          'most echt',
          'most ecofriendly',
          'most effective',
          'most effectively',
          'most estimable',
          'most expert',
          'most expertly',
          'most favorable',
          'most favorably',
          'most favourable',
          'most fortunate',
          'most fortunately',
          'most fresh',
          'most freshly',
          'most full',
          'most fully',
          'most genuine',
          'most genuinely',
          'most good',
          'most goodish',
          'most goody-goody',
          'most great',
          'most greatly',
          'most green',
          'most greenly',
          'most groovy',
          'most healthful',
          'most healthily',
          'most healthy',
          'most honest',
          'most honestly',
          'most honorable',
          'most honorably',
          'most hot',
          'most hotly',
          'most instagood',
          'most intellectual',
          'most intellectually',
          'most just',
          'most justly',
          'most keen',
          'most keenly',
          'most near',
          'most neat',
          'most neatly',
          'most nice',
          'most nicely',
          'most nifty',
          'most old',
          'most operative',
          'most operatively',
          'most opportune',
          'most opportunely',
          'most peachy',
          'most pleasing',
          'most pleasingly',
          'most practice',
          'most proficient',
          'most proficiently',
          'most redeemy',
          'most redemptive',
          'most reputable',
          'most reputably',
          'most respectable',
          'most respectably',
          'most right',
          'most righteous',
          'most righteously',
          'most ripe',
          'most ripely',
          'most safe',
          'most saint',
          'most saintlike',
          'most saintly',
          'most salutary',
          'most satisfactorily',
          'most satisfactory',
          'most save',
          'most secure',
          'most securely',
          'most serious',
          'most seriously',
          'most skilful',
          'most skilled',
          'most skillful',
          'most skillfully',
          'most slap-up',
          'most smash',
          'most solid',
          'most solidly',
          'most sound',
          'most soundly',
          'most superb',
          'most superbly',
          'most swell',
          'most unacceptably',
          'most unspoiled',
          'most unspoilt',
          'most upright',
          'most uprightly',
          'most well',
          'most well-behave',
          'most white',
          'nearest',
          'neatest',
          'nicest',
          'niftiest',
          'oldest',
          'operativest',
          'opportunest',
          'peachiest',
          'pleasingest',
          'practicest',
          'proficientest',
          'quite acceptable',
          'quite adept',
          'quite admirable',
          'quite admirably',
          'quite advantageous',
          'quite advantageously',
          'quite ample',
          'quite amply',
          'quite angelic',
          'quite angelical',
          'quite angelically',
          'quite bang-up',
          'quite beatific',
          'quite beneficial',
          'quite beneficially',
          'quite bully',
          'quite close',
          'quite closely',
          'quite complete',
          'quite completely',
          'quite cork',
          'quite cracky',
          'quite dandily',
          'quite dandy',
          'quite dear',
          'quite dearly',
          'quite decent',
          'quite decently',
          'quite dependable',
          'quite dependably',
          'quite discriminating',
          'quite echt',
          'quite ecofriendly',
          'quite effective',
          'quite effectively',
          'quite estimable',
          'quite expert',
          'quite expertly',
          'quite favorable',
          'quite favorably',
          'quite favourable',
          'quite fortunate',
          'quite fortunately',
          'quite fresh',
          'quite freshly',
          'quite full',
          'quite fully',
          'quite genuine',
          'quite genuinely',
          'quite good',
          'quite goodish',
          'quite goody-goody',
          'quite great',
          'quite greatly',
          'quite green',
          'quite greenly',
          'quite groovy',
          'quite healthful',
          'quite healthily',
          'quite healthy',
          'quite honest',
          'quite honestly',
          'quite honorable',
          'quite honorably',
          'quite hot',
          'quite hotly',
          'quite instagood',
          'quite intellectual',
          'quite intellectually',
          'quite just',
          'quite justly',
          'quite keen',
          'quite keenly',
          'quite near',
          'quite neat',
          'quite neatly',
          'quite nice',
          'quite nicely',
          'quite nifty',
          'quite old',
          'quite operative',
          'quite operatively',
          'quite opportune',
          'quite opportunely',
          'quite peachy',
          'quite pleasing',
          'quite pleasingly',
          'quite practice',
          'quite proficient',
          'quite proficiently',
          'quite redeemy',
          'quite redemptive',
          'quite reputable',
          'quite reputably',
          'quite respectable',
          'quite respectably',
          'quite right',
          'quite righteous',
          'quite righteously',
          'quite ripe',
          'quite ripely',
          'quite safe',
          'quite saint',
          'quite saintlike',
          'quite saintly',
          'quite salutary',
          'quite satisfactorily',
          'quite satisfactory',
          'quite save',
          'quite secure',
          'quite securely',
          'quite serious',
          'quite seriously',
          'quite skilful',
          'quite skilled',
          'quite skillful',
          'quite skillfully',
          'quite slap-up',
          'quite smash',
          'quite solid',
          'quite solidly',
          'quite sound',
          'quite soundly',
          'quite superb',
          'quite superbly',
          'quite swell',
          'quite unacceptably',
          'quite unspoiled',
          'quite unspoilt',
          'quite upright',
          'quite uprightly',
          'quite well',
          'quite well-behave',
          'quite white',
          'rather acceptable',
          'rather adept',
          'rather admirable',
          'rather admirably',
          'rather advantageous',
          'rather advantageously',
          'rather ample',
          'rather amply',
          'rather angelic',
          'rather angelical',
          'rather angelically',
          'rather bang-up',
          'rather beatific',
          'rather beneficial',
          'rather beneficially',
          'rather bully',
          'rather close',
          'rather closely',
          'rather complete',
          'rather completely',
          'rather cork',
          'rather cracky',
          'rather dandily',
          'rather dandy',
          'rather dear',
          'rather dearly',
          'rather decent',
          'rather decently',
          'rather dependable',
          'rather dependably',
          'rather discriminating',
          'rather echt',
          'rather ecofriendly',
          'rather effective',
          'rather effectively',
          'rather estimable',
          'rather expert',
          'rather expertly',
          'rather favorable',
          'rather favorably',
          'rather favourable',
          'rather fortunate',
          'rather fortunately',
          'rather fresh',
          'rather freshly',
          'rather full',
          'rather fully',
          'rather genuine',
          'rather genuinely',
          'rather good',
          'rather goodish',
          'rather goody-goody',
          'rather great',
          'rather greatly',
          'rather green',
          'rather greenly',
          'rather groovy',
          'rather healthful',
          'rather healthily',
          'rather healthy',
          'rather honest',
          'rather honestly',
          'rather honorable',
          'rather honorably',
          'rather hot',
          'rather hotly',
          'rather instagood',
          'rather intellectual',
          'rather intellectually',
          'rather just',
          'rather justly',
          'rather keen',
          'rather keenly',
          'rather near',
          'rather neat',
          'rather neatly',
          'rather nice',
          'rather nicely',
          'rather nifty',
          'rather old',
          'rather operative',
          'rather operatively',
          'rather opportune',
          'rather opportunely',
          'rather peachy',
          'rather pleasing',
          'rather pleasingly',
          'rather practice',
          'rather proficient',
          'rather proficiently',
          'rather redeemy',
          'rather redemptive',
          'rather reputable',
          'rather reputably',
          'rather respectable',
          'rather respectably',
          'rather right',
          'rather righteous',
          'rather righteously',
          'rather ripe',
          'rather ripely',
          'rather safe',
          'rather saint',
          'rather saintlike',
          'rather saintly',
          'rather salutary',
          'rather satisfactorily',
          'rather satisfactory',
          'rather save',
          'rather secure',
          'rather securely',
          'rather serious',
          'rather seriously',
          'rather skilful',
          'rather skilled',
          'rather skillful',
          'rather skillfully',
          'rather slap-up',
          'rather smash',
          'rather solid',
          'rather solidly',
          'rather sound',
          'rather soundly',
          'rather superb',
          'rather superbly',
          'rather swell',
          'rather unacceptably',
          'rather unspoiled',
          'rather unspoilt',
          'rather upright',
          'rather uprightly',
          'rather well',
          'rather well-behave',
          'rather white',
          'redeemiest',
          'redemptivest',
          'reputablest',
          'respectablest',
          'righteousest',
          'rightest',
          'ripest',
          'safest',
          'saintest',
          'saintliest',
          'saintlikest',
          'salutariest',
          'satisfactoriest',
          'savest',
          'securest',
          'seriousest',
          'skilfulest',
          'skilledest',
          'skillfulest',
          'slap-upest',
          'smashest',
          'solidest',
          'soundest',
          'superbest',
          'swellest',
          'too acceptable',
          'too adept',
          'too admirable',
          'too admirably',
          'too advantageous',
          'too advantageously',
          'too ample',
          'too amply',
          'too angelic',
          'too angelical',
          'too angelically',
          'too bang-up',
          'too beatific',
          'too beneficial',
          'too beneficially',
          'too bully',
          'too close',
          'too closely',
          'too complete',
          'too completely',
          'too cork',
          'too cracky',
          'too dandily',
          'too dandy',
          'too dear',
          'too dearly',
          'too decent',
          'too decently',
          'too dependable',
          'too dependably',
          'too discriminating',
          'too echt',
          'too ecofriendly',
          'too effective',
          'too effectively',
          'too estimable',
          'too expert',
          'too expertly',
          'too favorable',
          'too favorably',
          'too favourable',
          'too fortunate',
          'too fortunately',
          'too fresh',
          'too freshly',
          'too full',
          'too fully',
          'too genuine',
          'too genuinely',
          'too good',
          'too goodish',
          'too goody-goody',
          'too great',
          'too greatly',
          'too green',
          'too greenly',
          'too groovy',
          'too healthful',
          'too healthily',
          'too healthy',
          'too honest',
          'too honestly',
          'too honorable',
          'too honorably',
          'too hot',
          'too hotly',
          'too instagood',
          'too intellectual',
          'too intellectually',
          'too just',
          'too justly',
          'too keen',
          'too keenly',
          'too near',
          'too neat',
          'too neatly',
          'too nice',
          'too nicely',
          'too nifty',
          'too old',
          'too operative',
          'too operatively',
          'too opportune',
          'too opportunely',
          'too peachy',
          'too pleasing',
          'too pleasingly',
          'too practice',
          'too proficient',
          'too proficiently',
          'too redeemy',
          'too redemptive',
          'too reputable',
          'too reputably',
          'too respectable',
          'too respectably',
          'too right',
          'too righteous',
          'too righteously',
          'too ripe',
          'too ripely',
          'too safe',
          'too saint',
          'too saintlike',
          'too saintly',
          'too salutary',
          'too satisfactorily',
          'too satisfactory',
          'too save',
          'too secure',
          'too securely',
          'too serious',
          'too seriously',
          'too skilful',
          'too skilled',
          'too skillful',
          'too skillfully',
          'too slap-up',
          'too smash',
          'too solid',
          'too solidly',
          'too sound',
          'too soundly',
          'too superb',
          'too superbly',
          'too swell',
          'too unacceptably',
          'too unspoiled',
          'too unspoilt',
          'too upright',
          'too uprightly',
          'too well',
          'too well-behave',
          'too white',
          'unspoiledest',
          'unspoiltest',
          'uprightest',
          'very acceptable',
          'very adept',
          'very admirable',
          'very admirably',
          'very advantageous',
          'very advantageously',
          'very ample',
          'very amply',
          'very angelic',
          'very angelical',
          'very angelically',
          'very bang-up',
          'very beatific',
          'very beneficial',
          'very beneficially',
          'very bully',
          'very close',
          'very closely',
          'very complete',
          'very completely',
          'very cork',
          'very cracky',
          'very dandily',
          'very dandy',
          'very dear',
          'very dearly',
          'very decent',
          'very decently',
          'very dependable',
          'very dependably',
          'very discriminating',
          'very echt',
          'very ecofriendly',
          'very effective',
          'very effectively',
          'very estimable',
          'very expert',
          'very expertly',
          'very favorable',
          'very favorably',
          'very favourable',
          'very fortunate',
          'very fortunately',
          'very fresh',
          'very freshly',
          'very full',
          'very fully',
          'very genuine',
          'very genuinely',
          'very good',
          'very goodish',
          'very goody-goody',
          'very great',
          'very greatly',
          'very green',
          'very greenly',
          'very groovy',
          'very healthful',
          'very healthily',
          'very healthy',
          'very honest',
          'very honestly',
          'very honorable',
          'very honorably',
          'very hot',
          'very hotly',
          'very instagood',
          'very intellectual',
          'very intellectually',
          'very just',
          'very justly',
          'very keen',
          'very keenly',
          'very near',
          'very neat',
          'very neatly',
          'very nice',
          'very nicely',
          'very nifty',
          'very old',
          'very operative',
          'very operatively',
          'very opportune',
          'very opportunely',
          'very peachy',
          'very pleasing',
          'very pleasingly',
          'very practice',
          'very proficient',
          'very proficiently',
          'very redeemy',
          'very redemptive',
          'very reputable',
          'very reputably',
          'very respectable',
          'very respectably',
          'very right',
          'very righteous',
          'very righteously',
          'very ripe',
          'very ripely',
          'very safe',
          'very saint',
          'very saintlike',
          'very saintly',
          'very salutary',
          'very satisfactorily',
          'very satisfactory',
          'very save',
          'very secure',
          'very securely',
          'very serious',
          'very seriously',
          'very skilful',
          'very skilled',
          'very skillful',
          'very skillfully',
          'very slap-up',
          'very smash',
          'very solid',
          'very solidly',
          'very sound',
          'very soundly',
          'very superb',
          'very superbly',
          'very swell',
          'very unacceptably',
          'very unspoiled',
          'very unspoilt',
          'very upright',
          'very uprightly',
          'very well',
          'very well-behave',
          'very white',
          'well-behavest',
          'whitest',
        ]),
        'main_answer': 'best',
        'prompt': 'optime',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'bonus',
          'bona',
          'bonum',
        ]),
        'prompt': 'bonus',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'levis',
        'choices': list([
          'e',
          'audio',
          'levis',
        ]),
        'prompt': 'light',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'ParseWordCompToLatQuestion': dict({
        'answers': list([
          'agricolas',
        ]),
        'components': 'accusative plural',
        'main_answer': 'agricolas',
        'prompt': 'farmer: agricola, agricolae, (m)',
      }),
      'question_type': 'ParseWordCompToLatQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'ample',
          'astronomic',
          'astronomical',
          'bangy',
          'bear-size',
          'big',
          'biggish',
          'blown-up',
          'bombastic',
          'bouff',
          'broad',
          'brobdingnagian',
          'bulky',
          'capacious',
          'colossal',
          'comprehensive',
          'conspicuous',
          'cosmic',
          'declamatory',
          'deep',
          'double',
          'elephantine',
          'enceinte',
          'enlary',
          'enormous',
          'epic',
          'expectant',
          'extended',
          'extensive',
          'full-size',
          'galactic',
          'gargantuan',
          'generous',
          'giant',
          'gigantic',
          'grand',
          'gravid',
          'great',
          'heavy',
          'heroic',
          'huge',
          'hulking',
          'hulky',
          'humongous',
          'immense',
          'important',
          'jumbo',
          'king-size',
          'large',
          'large-mouth',
          'large-scale',
          'larger-than-life',
          'largish',
          'life-size',
          'life-sy',
          'lifesize',
          'macro',
          'macroscopic',
          'macroscopical',
          'magnanimous',
          'mammoth',
          'man-size',
          'massive',
          'medium-large',
          'monolithic',
          'monstrous',
          'monumental',
          'mountainous',
          'orotund',
          'outsize',
          'outsized',
          'overlarge',
          'oversize',
          'oversized',
          'plump',
          'pregnant',
          'prodigious',
          'prominent',
          'puffy',
          'queen-size',
          'rangy',
          'rhetorical',
          'significant',
          'sizable',
          'sizeable',
          'spacious',
          'stupendous',
          'super',
          'thump',
          'titanic',
          'tremendous',
          'tumid',
          'turgid',
          'vast',
          'volume',
          'voluminous',
          'wallopy',
          'whack',
          'whoppy',
          'wide',
          'wide-rangy',
        ]),
        'main_answer': 'large',
        'prompt': 'ingentia',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'dative singular feminine',
          'dative singular masculine',
          'dative singular neuter',
          'nominative plural masculine',
        ]),
        'dictionary_entry': 'that: ille, illa, illud',
        'main_answer': 'nominative plural masculine',
        'prompt': 'illi',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'laetus',
        'choices': list([
          'e',
          'laetus',
          'ego',
        ]),
        'prompt': 'happy',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'genitive singular',
          'nominative plural',
          'vocative plural',
        ]),
        'dictionary_entry': 'boy: puer, pueri, (m)',
        'main_answer': 'nominative plural',
        'prompt': 'pueri',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'capio',
        'choices': list([
          'hic',
          'capio',
          'ego',
        ]),
        'prompt': 'I take',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'of that',
        ]),
        'main_answer': 'of that',
        'prompt': 'illius',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'levis',
          'leve',
        ]),
        'prompt': 'levis',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'ingens',
          'ingentis',
        ]),
        'prompt': 'ingens',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'inquam',
        'choices': list([
          'ingredior',
          'laetus',
          'inquam',
        ]),
        'prompt': 'I say',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'comparative ablative singular feminine',
          'comparative ablative singular masculine',
          'comparative ablative singular neuter',
        ]),
        'dictionary_entry': 'large: ingens, ingentis, (3-1)',
        'main_answer': 'comparative ablative singular masculine',
        'prompt': 'ingentiore',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'good',
        'choices': list([
          'dog',
          'good',
          'I say',
        ]),
        'prompt': 'bonus',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'ParseWordCompToLatQuestion': dict({
        'answers': list([
          'ingredienda',
        ]),
        'components': 'gerundive feminine nominative singular',
        'main_answer': 'ingredienda',
        'prompt': 'enter: ingredior, ingredi, ingressus sum',
      }),
      'question_type': 'ParseWordCompToLatQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'name',
        'choices': list([
          'name',
          'from',
          'girl',
        ]),
        'prompt': 'nomen',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'genitive singular',
        ]),
        'dictionary_entry': 'I: ego, (irregular)',
        'main_answer': 'genitive singular',
        'prompt': 'mei',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'audio',
          'audire',
          'audivi',
          'auditus',
        ]),
        'prompt': 'audio',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'ParseWordCompToLatQuestion': dict({
        'answers': list([
          'capiens',
        ]),
        'components': 'present active participle neuter accusative singular',
        'main_answer': 'capiens',
        'prompt': 'take: capio, capere, cepi, captus',
      }),
      'question_type': 'ParseWordCompToLatQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'puer',
        'choices': list([
          'laetus',
          'puer',
          'nomen',
        ]),
        'prompt': 'boy',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'ablazer',
          'abstemiouser',
          'airier',
          'autofluorescenter',
          'bioluminescenter',
          'brighter',
          'buoyanter',
          'calorie-freeer',
          'cander',
          'candescenter',
          'casualer',
          'cleaner',
          'clearer',
          'deficienter',
          'digestibler',
          'easier',
          'fainter',
          'fat-freeer',
          'fatler',
          'floatier',
          'flooder',
          'floodlighter',
          'fluorescenter',
          'fooler',
          'frivolouser',
          'gentler',
          'idler',
          'iller',
          'illuminateder',
          'incandescenter',
          'inflameder',
          'insignificanter',
          'insufficienter',
          'lampliter',
          'light-armer',
          'light-coloreder',
          'light-dutier',
          'light-footer',
          'light-headeder',
          'lighter',
          'lighter-than-airer',
          'lightheadeder',
          'lighting-uper',
          'lightly-armer',
          'lightsomer',
          'lightweighter',
          'liter',
          'litter',
          'livider',
          'looser',
          'low-caler',
          'low-densitier',
          'luminescenter',
          'more ablaze',
          'more abstemious',
          'more airy',
          'more autofluorescent',
          'more bioluminescent',
          'more bright',
          'more buoyant',
          'more calorie-free',
          'more cand',
          'more candescent',
          'more casual',
          'more clean',
          'more clear',
          'more deficient',
          'more digestible',
          'more easy',
          'more faint',
          'more fat-free',
          'more fatle',
          'more floaty',
          'more flood',
          'more floodlight',
          'more fluorescent',
          'more fool',
          'more frivolous',
          'more gentle',
          'more idle',
          'more ill',
          'more illuminated',
          'more incandescent',
          'more inflamed',
          'more insignificant',
          'more insufficient',
          'more lamplit',
          'more light',
          'more light-arm',
          'more light-colored',
          'more light-duty',
          'more light-foot',
          'more light-headed',
          'more lighter-than-air',
          'more lightheaded',
          'more lighting-up',
          'more lightly-arm',
          'more lightsome',
          'more lightweight',
          'more lit',
          'more lite',
          'more livid',
          'more loose',
          'more low-cal',
          'more low-density',
          'more luminescent',
          'more nonfat',
          'more pale',
          'more palish',
          'more pastel',
          'more phosphorescent',
          'more powdery',
          'more promiscuous',
          'more pure',
          'more redden',
          'more scant',
          'more shallow',
          'more short',
          'more sick',
          'more sluttish',
          'more soft',
          'more sunlit',
          'more sunny',
          'more sunstruck',
          'more swoon',
          'more temperate',
          'more thin',
          'more trippy',
          'more unaccented',
          'more unchaste',
          'more uncloud',
          'more undemanding',
          'more unimportant',
          'more unstress',
          'more wakeful',
          'more wanton',
          'more weak',
          'more well-light',
          'more white',
          'nonfater',
          'paler',
          'palisher',
          'pasteler',
          'phosphorescenter',
          'powderier',
          'promiscuouser',
          'purer',
          'reddener',
          'scanter',
          'shallower',
          'shorter',
          'sicker',
          'sluttisher',
          'softer',
          'sunliter',
          'sunnier',
          'sunstrucker',
          'swooner',
          'temperater',
          'thinner',
          'trippier',
          'unaccenteder',
          'unchaster',
          'unclouder',
          'undemandinger',
          'unimportanter',
          'unstresser',
          'wakefuler',
          'wantoner',
          'weaker',
          'well-lighter',
          'whiter',
          'worse',
        ]),
        'main_answer': 'lighter',
        'prompt': 'levioris',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'ParseWordCompToLatQuestion': dict({
        'answers': list([
          'has',
        ]),
        'components': 'accusative plural feminine',
        'main_answer': 'has',
        'prompt': 'this: hic, haec, hoc',
      }),
      'question_type': 'ParseWordCompToLatQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'laetus',
          'laeta',
          'laetum',
        ]),
        'prompt': 'laetus',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'laetus',
        'choices': list([
          'laetus',
          'puella',
          'hic',
        ]),
        'prompt': 'happy',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'light',
        'choices': list([
          'light',
          'good',
          'into',
        ]),
        'prompt': 'levis',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'nominative plural feminine',
        ]),
        'dictionary_entry': 'that: ille, illa, illud',
        'main_answer': 'nominative plural feminine',
        'prompt': 'illae',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'puella',
          'puellae',
        ]),
        'prompt': 'puella',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'bonus',
        'choices': list([
          'capio',
          'acer',
          'bonus',
        ]),
        'prompt': 'good',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'ille',
        'choices': list([
          'capio',
          'ingens',
          'ille',
        ]),
        'prompt': 'that',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'ingredior',
          'ingredi',
          'ingressus sum',
        ]),
        'prompt': 'ingredior',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'acceptablest',
          'adeptest',
          'admirablest',
          'advantageousest',
          'amplest',
          'angelicalest',
          'angelicest',
          'bang-upest',
          'beatificest',
          'beneficialest',
          'best',
          'bulliest',
          'closest',
          'completest',
          'corkest',
          'crackiest',
          'dandiest',
          'dearest',
          'decentest',
          'dependablest',
          'discriminatingest',
          'echtest',
          'ecofriendliest',
          'effectivest',
          'eldest',
          'estimablest',
          'expertest',
          'extremely acceptable',
          'extremely adept',
          'extremely admirable',
          'extremely advantageous',
          'extremely ample',
          'extremely angelic',
          'extremely angelical',
          'extremely bang-up',
          'extremely beatific',
          'extremely beneficial',
          'extremely bully',
          'extremely close',
          'extremely complete',
          'extremely cork',
          'extremely cracky',
          'extremely dandy',
          'extremely dear',
          'extremely decent',
          'extremely dependable',
          'extremely discriminating',
          'extremely echt',
          'extremely ecofriendly',
          'extremely effective',
          'extremely estimable',
          'extremely expert',
          'extremely favorable',
          'extremely favourable',
          'extremely fortunate',
          'extremely fresh',
          'extremely full',
          'extremely genuine',
          'extremely good',
          'extremely goodish',
          'extremely goody-goody',
          'extremely great',
          'extremely green',
          'extremely groovy',
          'extremely healthful',
          'extremely healthy',
          'extremely honest',
          'extremely honorable',
          'extremely hot',
          'extremely instagood',
          'extremely intellectual',
          'extremely just',
          'extremely keen',
          'extremely near',
          'extremely neat',
          'extremely nice',
          'extremely nifty',
          'extremely old',
          'extremely operative',
          'extremely opportune',
          'extremely peachy',
          'extremely pleasing',
          'extremely practice',
          'extremely proficient',
          'extremely redeemy',
          'extremely redemptive',
          'extremely reputable',
          'extremely respectable',
          'extremely right',
          'extremely righteous',
          'extremely ripe',
          'extremely safe',
          'extremely saint',
          'extremely saintlike',
          'extremely saintly',
          'extremely salutary',
          'extremely satisfactory',
          'extremely save',
          'extremely secure',
          'extremely serious',
          'extremely skilful',
          'extremely skilled',
          'extremely skillful',
          'extremely slap-up',
          'extremely smash',
          'extremely solid',
          'extremely sound',
          'extremely superb',
          'extremely swell',
          'extremely unspoiled',
          'extremely unspoilt',
          'extremely upright',
          'extremely well',
          'extremely well-behave',
          'extremely white',
          'favorablest',
          'favourablest',
          'fortunatest',
          'freshest',
          'fullest',
          'genuinest',
          'goodishest',
          'goody-goodiest',
          'greatest',
          'greenest',
          'grooviest',
          'healthfulest',
          'healthiest',
          'honestest',
          'honorablest',
          'hottest',
          'instagoodest',
          'intellectualest',
          'justest',
          'keenest',
          'most acceptable',
          'most adept',
          'most admirable',
          'most advantageous',
          'most ample',
          'most angelic',
          'most angelical',
          'most bang-up',
          'most beatific',
          'most beneficial',
          'most bully',
          'most close',
          'most complete',
          'most cork',
          'most cracky',
          'most dandy',
          'most dear',
          'most decent',
          'most dependable',
          'most discriminating',
          'most echt',
          'most ecofriendly',
          'most effective',
          'most estimable',
          'most expert',
          'most favorable',
          'most favourable',
          'most fortunate',
          'most fresh',
          'most full',
          'most genuine',
          'most good',
          'most goodish',
          'most goody-goody',
          'most great',
          'most green',
          'most groovy',
          'most healthful',
          'most healthy',
          'most honest',
          'most honorable',
          'most hot',
          'most instagood',
          'most intellectual',
          'most just',
          'most keen',
          'most near',
          'most neat',
          'most nice',
          'most nifty',
          'most old',
          'most operative',
          'most opportune',
          'most peachy',
          'most pleasing',
          'most practice',
          'most proficient',
          'most redeemy',
          'most redemptive',
          'most reputable',
          'most respectable',
          'most right',
          'most righteous',
          'most ripe',
          'most safe',
          'most saint',
          'most saintlike',
          'most saintly',
          'most salutary',
          'most satisfactory',
          'most save',
          'most secure',
          'most serious',
          'most skilful',
          'most skilled',
          'most skillful',
          'most slap-up',
          'most smash',
          'most solid',
          'most sound',
          'most superb',
          'most swell',
          'most unspoiled',
          'most unspoilt',
          'most upright',
          'most well',
          'most well-behave',
          'most white',
          'nearest',
          'neatest',
          'nicest',
          'niftiest',
          'oldest',
          'operativest',
          'opportunest',
          'peachiest',
          'pleasingest',
          'practicest',
          'proficientest',
          'quite acceptable',
          'quite adept',
          'quite admirable',
          'quite advantageous',
          'quite ample',
          'quite angelic',
          'quite angelical',
          'quite bang-up',
          'quite beatific',
          'quite beneficial',
          'quite bully',
          'quite close',
          'quite complete',
          'quite cork',
          'quite cracky',
          'quite dandy',
          'quite dear',
          'quite decent',
          'quite dependable',
          'quite discriminating',
          'quite echt',
          'quite ecofriendly',
          'quite effective',
          'quite estimable',
          'quite expert',
          'quite favorable',
          'quite favourable',
          'quite fortunate',
          'quite fresh',
          'quite full',
          'quite genuine',
          'quite good',
          'quite goodish',
          'quite goody-goody',
          'quite great',
          'quite green',
          'quite groovy',
          'quite healthful',
          'quite healthy',
          'quite honest',
          'quite honorable',
          'quite hot',
          'quite instagood',
          'quite intellectual',
          'quite just',
          'quite keen',
          'quite near',
          'quite neat',
          'quite nice',
          'quite nifty',
          'quite old',
          'quite operative',
          'quite opportune',
          'quite peachy',
          'quite pleasing',
          'quite practice',
          'quite proficient',
          'quite redeemy',
          'quite redemptive',
          'quite reputable',
          'quite respectable',
          'quite right',
          'quite righteous',
          'quite ripe',
          'quite safe',
          'quite saint',
          'quite saintlike',
          'quite saintly',
          'quite salutary',
          'quite satisfactory',
          'quite save',
          'quite secure',
          'quite serious',
          'quite skilful',
          'quite skilled',
          'quite skillful',
          'quite slap-up',
          'quite smash',
          'quite solid',
          'quite sound',
          'quite superb',
          'quite swell',
          'quite unspoiled',
          'quite unspoilt',
          'quite upright',
          'quite well',
          'quite well-behave',
          'quite white',
          'rather acceptable',
          'rather adept',
          'rather admirable',
          'rather advantageous',
          'rather ample',
          'rather angelic',
          'rather angelical',
          'rather bang-up',
          'rather beatific',
          'rather beneficial',
          'rather bully',
          'rather close',
          'rather complete',
          'rather cork',
          'rather cracky',
          'rather dandy',
          'rather dear',
          'rather decent',
          'rather dependable',
          'rather discriminating',
          'rather echt',
          'rather ecofriendly',
          'rather effective',
          'rather estimable',
          'rather expert',
          'rather favorable',
          'rather favourable',
          'rather fortunate',
          'rather fresh',
          'rather full',
          'rather genuine',
          'rather good',
          'rather goodish',
          'rather goody-goody',
          'rather great',
          'rather green',
          'rather groovy',
          'rather healthful',
          'rather healthy',
          'rather honest',
          'rather honorable',
          'rather hot',
          'rather instagood',
          'rather intellectual',
          'rather just',
          'rather keen',
          'rather near',
          'rather neat',
          'rather nice',
          'rather nifty',
          'rather old',
          'rather operative',
          'rather opportune',
          'rather peachy',
          'rather pleasing',
          'rather practice',
          'rather proficient',
          'rather redeemy',
          'rather redemptive',
          'rather reputable',
          'rather respectable',
          'rather right',
          'rather righteous',
          'rather ripe',
          'rather safe',
          'rather saint',
          'rather saintlike',
          'rather saintly',
          'rather salutary',
          'rather satisfactory',
          'rather save',
          'rather secure',
          'rather serious',
          'rather skilful',
          'rather skilled',
          'rather skillful',
          'rather slap-up',
          'rather smash',
          'rather solid',
          'rather sound',
          'rather superb',
          'rather swell',
          'rather unspoiled',
          'rather unspoilt',
          'rather upright',
          'rather well',
          'rather well-behave',
          'rather white',
          'redeemiest',
          'redemptivest',
          'reputablest',
          'respectablest',
          'righteousest',
          'rightest',
          'ripest',
          'safest',
          'saintest',
          'saintliest',
          'saintlikest',
          'salutariest',
          'satisfactoriest',
          'savest',
          'securest',
          'seriousest',
          'skilfulest',
          'skilledest',
          'skillfulest',
          'slap-upest',
          'smashest',
          'solidest',
          'soundest',
          'superbest',
          'swellest',
          'too acceptable',
          'too adept',
          'too admirable',
          'too advantageous',
          'too ample',
          'too angelic',
          'too angelical',
          'too bang-up',
          'too beatific',
          'too beneficial',
          'too bully',
          'too close',
          'too complete',
          'too cork',
          'too cracky',
          'too dandy',
          'too dear',
          'too decent',
          'too dependable',
          'too discriminating',
          'too echt',
          'too ecofriendly',
          'too effective',
          'too estimable',
          'too expert',
          'too favorable',
          'too favourable',
          'too fortunate',
          'too fresh',
          'too full',
          'too genuine',
          'too good',
          'too goodish',
          'too goody-goody',
          'too great',
          'too green',
          'too groovy',
          'too healthful',
          'too healthy',
          'too honest',
          'too honorable',
          'too hot',
          'too instagood',
          'too intellectual',
          'too just',
          'too keen',
          'too near',
          'too neat',
          'too nice',
          'too nifty',
          'too old',
          'too operative',
          'too opportune',
          'too peachy',
          'too pleasing',
          'too practice',
          'too proficient',
          'too redeemy',
          'too redemptive',
          'too reputable',
          'too respectable',
          'too right',
          'too righteous',
          'too ripe',
          'too safe',
          'too saint',
          'too saintlike',
          'too saintly',
          'too salutary',
          'too satisfactory',
          'too save',
          'too secure',
          'too serious',
          'too skilful',
          'too skilled',
          'too skillful',
          'too slap-up',
          'too smash',
          'too solid',
          'too sound',
          'too superb',
          'too swell',
          'too unspoiled',
          'too unspoilt',
          'too upright',
          'too well',
          'too well-behave',
          'too white',
          'unspoiledest',
          'unspoiltest',
          'uprightest',
          'very acceptable',
          'very adept',
          'very admirable',
          'very advantageous',
          'very ample',
          'very angelic',
          'very angelical',
          'very bang-up',
          'very beatific',
          'very beneficial',
          'very bully',
          'very close',
          'very complete',
          'very cork',
          'very cracky',
          'very dandy',
          'very dear',
          'very decent',
          'very dependable',
          'very discriminating',
          'very echt',
          'very ecofriendly',
          'very effective',
          'very estimable',
          'very expert',
          'very favorable',
          'very favourable',
          'very fortunate',
          'very fresh',
          'very full',
          'very genuine',
          'very good',
          'very goodish',
          'very goody-goody',
          'very great',
          'very green',
          'very groovy',
          'very healthful',
          'very healthy',
          'very honest',
          'very honorable',
          'very hot',
          'very instagood',
          'very intellectual',
          'very just',
          'very keen',
          'very near',
          'very neat',
          'very nice',
          'very nifty',
          'very old',
          'very operative',
          'very opportune',
          'very peachy',
          'very pleasing',
          'very practice',
          'very proficient',
          'very redeemy',
          'very redemptive',
          'very reputable',
          'very respectable',
          'very right',
          'very righteous',
          'very ripe',
          'very safe',
          'very saint',
          'very saintlike',
          'very saintly',
          'very salutary',
          'very satisfactory',
          'very save',
          'very secure',
          'very serious',
          'very skilful',
          'very skilled',
          'very skillful',
          'very slap-up',
          'very smash',
          'very solid',
          'very sound',
          'very superb',
          'very swell',
          'very unspoiled',
          'very unspoilt',
          'very upright',
          'very well',
          'very well-behave',
          'very white',
          'well-behavest',
          'whitest',
        ]),
        'main_answer': 'best',
        'prompt': 'optima',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'present active imperative singular 2nd person',
        ]),
        'dictionary_entry': 'say: inquam',
        'main_answer': 'present active imperative singular 2nd person',
        'prompt': 'inque',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'acuter',
          'bang-uper',
          'better',
          'bullier',
          'corker',
          'crackier',
          'cuttier',
          'dandier',
          'discriminatinger',
          'elder',
          'exquisiter',
          'greater',
          'groovier',
          'incisiver',
          'intenser',
          'keener',
          'knifeliker',
          'lancinater',
          'more acute',
          'more bang-up',
          'more bully',
          'more cork',
          'more cracky',
          'more cutty',
          'more dandy',
          'more discriminating',
          'more exquisite',
          'more good',
          'more great',
          'more groovy',
          'more incisive',
          'more intense',
          'more keen',
          'more knifelike',
          'more lancinate',
          'more neat',
          'more nifty',
          'more old',
          'more peachy',
          'more penetrative',
          'more penetraty',
          'more perceptive',
          'more piercing',
          'more sharp',
          'more slap-up',
          'more smash',
          'more stabby',
          'more swell',
          'neater',
          'niftier',
          'older',
          'peachier',
          'penetratier',
          'penetrativer',
          'perceptiver',
          'piercinger',
          'sharper',
          'slap-uper',
          'smasher',
          'stabbier',
          'sweller',
        ]),
        'main_answer': 'keener',
        'prompt': 'acriori',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'mihi',
        ]),
        'main_answer': 'mihi',
        'prompt': 'to me',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'ParseWordCompToLatQuestion': dict({
        'answers': list([
          'acerrimis',
        ]),
        'components': 'superlative ablative plural masculine',
        'main_answer': 'acerrimis',
        'prompt': 'keen: acer, acris, acre, (3-3)',
      }),
      'question_type': 'ParseWordCompToLatQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'hic',
          'haec',
          'hoc',
        ]),
        'prompt': 'hic',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'inquimus',
        ]),
        'main_answer': 'inquimus',
        'prompt': 'we say',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'e',
        'choices': list([
          'agricola',
          'laetus',
          'e',
        ]),
        'prompt': 'from',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'genitive singular',
        ]),
        'dictionary_entry': 'name: nomen, nominis, (n)',
        'main_answer': 'genitive singular',
        'prompt': 'nominis',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'nomen',
        'choices': list([
          'in',
          'capio',
          'nomen',
        ]),
        'prompt': 'name',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'puellae',
          'puellas',
        ]),
        'main_answer': 'puellae',
        'prompt': 'girls',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
  ])
# ---
